# Crazyflie_NatNet_cpp

./: .gitmodules  CMakeLists.txt  Readme.md
Crazyflie/: CMake.cmake  ROS.cmake
Crazyflie/crazyflie_cpp/: CMake.cmake  CMakeLists.txt  ROS.cmake
Crazyflie/crazyflie_cpp/include/crazyflie_cpp/: Crazyflie.h
Crazyflie/crazyflie_cpp/src/: Crazyflie.cpp
Crazyflie/src/: version.cpp
Filter/: CMakeLists.txt
Filter/include/: fir_filter.h
Filter/src/: fir_filter.cpp
Filter/test/: Client-output.pts  Filter_test.cpp
GNUPlot/: CMakeLists.txt
NatNet/: CMakeLists.txt
NatNet/include/: NatNetUtility.h
NatNet/src/: NatNetUtility.cpp  NatNet_test.cpp  SampleClient.cpp  util_example.cpp
src/: Main.cpp  Main_delayed_uxy.cpp  Main_multi.cpp  Main_multi_csv.cpp  PB_Control.h  Recorder.h  Sensor.h  Trajectory_Planner.h  Velocity_Filter.h  condition_var_test.cpp  generatingPlotsFromCSV.py  scrap.cpp  test_read_csv.cpp  trajectories.csv  velocity_filter_test.cpp
